--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 REACT_APP_API_ROOT=https://api.harrogateinteractive.co.uk//wp-json/wp/v2
+REACT_APP_SERVICE_ID=service_7u2czcx
+REACT_APP_TEMPLATE_ID=template_3zeesgk
+REACT_APP_USER_ID=sOvTgyzOR9CmhU0GX
